# AI_basic

./: .gitignore  1_AI_음성인식.ipynb  2_AI_텍스트음성변환(TTS).ipynb  AI_basic(음성인식).ipynb  CHECKLIST.md  CNAME  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  GITHUB_PAGES_SETUP.md  PROJECT_SUMMARY.md  Python_basic.ipynb  QUICK_START.md  README.md  RESEARCH_PAPER.md  THESIS_GUIDE.md  ai_predictor.py  alembic.ini  config.toml  demo.html  docker-compose.yml  emr.db  main_benchmark.py  medical_simulator.py  package-lock.json  package.json  pyproject.toml  quick_start.sh  requirements.txt  start.sh  tailwind.config.js
.github/workflows/: deploy-pages.yml
aa/: readme.md  requirements.txt
aa/app/: main.py
aa/app/models/: detector.py
aa/app/services/: backup_strategy.py  detector.py  rl_agent.py  rust_client.py
aa/rust_encrypt_server/: Cargo.toml
aa/rust_encrypt_server/src/: main.rs
aa/tests/ unit/: test_backup_strategy.py  test_detector.py
aa/tests/integration/: test_api.py
agent/: agent.py
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  files.py  monitoring.py  threats.py  users.py
app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
app/models/: audit.py  file.py  role.py  threat.py  user.py
app/schemas/: auth.py  file.py  threat.py  user.py
app/services/: crypto_engine.py  file_monitor.py  rl_agent.py
backend/: .env.example  Cargo.toml  ai_service.py  app.py  models.py
backend/src/: backup.rs  config.rs  crypto.rs  detector.rs  main.rs  monitor.rs  storage.rs
configs/: sentinel.toml
demo_dir/: doc_000.txt.encrypted  doc_001.txt.encrypted  doc_002.txt.encrypted  doc_003.txt.encrypted  doc_004.txt.encrypted  doc_005.txt.encrypted  doc_006.txt.encrypted  doc_007.txt.encrypted  doc_008.txt.encrypted  doc_010.txt.encrypted  doc_011.txt.encrypted  doc_013.txt.encrypted  doc_014.txt.encrypted  doc_015.txt.encrypted  doc_016.txt.encrypted  doc_017.txt.encrypted  doc_018.txt.encrypted  doc_019.txt.encrypted
docs/: CNAME  index.html
frontend/: package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Dashboard.css  Dashboard.tsx
mvp/: docker-compose.yml
mvp/docs/: DEMO.md
mvp/emr-api/: app.py  requirements.txt
mvp/infra/init/: 001_init.sql
mvp/model-svc/: Dockerfile  app.py  requirements.txt
mvp/nginx/: nginx.conf
mvp/pacs-server/: app.py  requirements.txt
mvp/rust-guard/: Cargo.toml  Dockerfile
mvp/rust-guard/src/: main.rs
mvp/scripts/: run_local.sh
mvp/telemetry-agent/: Dockerfile  agent.py
rust_crypto/: Cargo.toml
rust_crypto/src/: lib.rs  python_bindings.rs
rustapp/sentinel/: Cargo.toml
rustapp/sentinel/src/: ai.rs  backup.rs  config.rs  crypto.rs  main.rs  monitor.rs  restore.rs
rxguard/: canary.py  cli.py  config.py  crypto_utils.py  logging_utils.py  repo.py  watcher.py
scripts/: setup.sh  start_services.py
server/: main.py
src/: App.css  App.js
src/components/: Navbar.js  ProtectedRoute.js
src/contexts/: AuthContext.js
src/pages/: AlgorithmDetail.js  AlgorithmGenerator.js  Dashboard.js  Home.js  Login.js  MyAlgorithms.js  Rankings.js  Register.js
tests/: test_api.py  test_crypto_engine.py  test_rl_agent.py
tools/: simulator.py
