[package]
name = "medguard"
version = "0.1.0"
edition = "2021"
authors = ["MedGuard Team"]
description = "High-performance ransomware defense for medical systems"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system monitoring
notify = "6.1"

# Cryptography
ring = "0.17"
blake3 = "1.5"
argon2 = { version = "0.5", default-features = false, features = ["std"] }

# Database
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# WebSocket
tokio-tungstenite = "0.21"

# System information
sysinfo = "0.30"

# File hashing
walkdir = "2.4"

# Compression
zstd = "0.13"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "medguard"
path = "src/main.rs"

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"

[[bin]]
name = "simulate_attack"
path = "src/bin/simulate_attack.rs"

[[bin]]
name = "medguard-cli"
path = "src/bin/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
