[package]
name = "medical_defense"
version = "0.1.0"
edition = "2021"
authors = ["Medical Cybersecurity Research Team"]
description = "AI 기반 선제적 랜섬웨어 방어 시스템 (석사 논문용 MVP)"

[lib]
name = "medical_defense"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 오류 처리
anyhow = "1.0"
thiserror = "1.0"

# 병렬 처리 (핵심 성능)
rayon = "1.8"

# 파일 시스템 모니터링
walkdir = "2.4"
notify = "6.1"

# 암호화 (해시 전용)
sha2 = "0.10"
hex = "0.4"

# 멀티스레드 통신
crossbeam-channel = "0.5"

# 로깅
log = "0.4"
env_logger = "0.11"

# Python 바인딩 (PyO3)
pyo3 = { version = "0.20", features = ["extension-module", "anyhow"], optional = true }

[features]
default = ["python"]
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "defense_benchmark"
harness = false
