[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "6.1"
walkdir = "2.5"
blake3 = "1.5"
rand = "0.8"
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["aes"] }
zeroize = "1.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
